--- a/styles/shared.css
+++ b/styles/shared.css
@@ -11,12 +11,14 @@ body {
     p {
       font-family: sans-serif;
     }
-  
+    
+    /*앵커태그는 브라우저에서 기본 상속이 있어서(파란색) 해당 속성이 있더라도 다른 기본 속성을 상속받지 않음 */
     a {
       font-family: sans-serif;
       color: rgb(167, 1, 78);
       text-decoration: none;
     }
+
     /*마우스를 갖다댈 때 underline이 생김 */
     /*hover : 마우스를 갖다댈 때 생기는  */
     a:hover {
