--- a/styles/full-week.css
+++ b/styles/full-week.css
@@ -1,11 +1,22 @@
 h1{
     font-size: 48px;
     color: rgb(71, 62, 62);
+    margin: 12px 0;
 }
 
+#description {
+  margin-bottom: 36px;
+}
+
+/* header p {
+  margin-bottom: 36px;
+} */
+
 a{
+  padding: 12px 48px;
   background-color: rgb(167, 1, 78);
   color: white;
+  border: 1px solid rgb(167, 1, 78);
   border-radius: 4px;
   font-size: 24px;
 }
@@ -17,10 +28,30 @@ a:hover {
 
 ol {
   list-style: none;
+  width: 500px;
+  margin: 36px auto;
+  padding: 0;
+
 } 
 
 li {
+  padding: 16px;
   margin: 32px;
   background-color: rgb(223,136,124);
   border-radius: 6px;
+}
+
+h2 {
+  color: rgb(78, 13, 5);
+  font-family: 'Oswald', sans-serif;
+}
+
+/* 결합자 이용하기 */
+main p {
+  margin: 12px;
+  color: rgb(71, 29, 22);
+}
+
+.highlight-goal {
+  background-color: rgb(226, 115, 101);
 }
