--- a/styles/full-week.css
+++ b/styles/full-week.css
@@ -1,11 +1,12 @@
 h1{
     font-size: 48px;
     color: rgb(71, 62, 62);
-    margin: 12px 0;
+    margin: 0;
 }
 
 #description {
-  margin-bottom: 36px;
+  margin: 12px;
+
 }
 
 /* header p {
@@ -19,6 +20,8 @@ a{
   border: 1px solid rgb(167, 1, 78);
   border-radius: 4px;
   font-size: 24px;
+  display: inline-block; /*해당요소가 인라인으로 표시되어야 함*/
+  margin: 0 0;
 }
 
 a:hover {
@@ -36,6 +39,7 @@ ol {
 
 li {
   padding: 16px;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   margin: 32px;
   background-color: rgb(223,136,124);
   border-radius: 6px;
