--- a/styles/shared.css
+++ b/styles/shared.css
@@ -2,28 +2,30 @@ body {
     text-align: center;
     background-color: #e9d7cf;
     color: rgb(83, 75, 75);
-    }
-  
-  h1 {
-      font-family: sans-serif;
-    }
-  
-    p {
-      font-family: sans-serif;
-      margin-bottom: 36px;
-    }
-    
-    /*앵커태그는 브라우저에서 기본 상속이 있어서(파란색) 해당 속성이 있더라도 다른 기본 속성을 상속받지 않음 */
-    a {
-      font-family: sans-serif;
-      color: rgb(167, 1, 78);
-      text-decoration: none;
-    }
+    margin: 50px;
 
-    /*마우스를 갖다댈 때 underline이 생김 */
-    /*hover : 마우스를 갖다댈 때 생기는  */
-    a:hover {
-      text-decoration: underline;
     }
+  
+h1 {
+  font-family: sans-serif;
+}
+
+p {
+  font-family: sans-serif;
+  margin-bottom: 24px;
+}
+
+/*앵커태그는 브라우저에서 기본 상속이 있어서(파란색) 해당 속성이 있더라도 다른 기본 속성을 상속받지 않음 */
+a {
+  font-family: sans-serif;
+  color: rgb(167, 1, 78);
+  text-decoration: none;
+}
+
+/*마우스를 갖다댈 때 underline이 생김 */
+/*hover : 마우스를 갖다댈 때 생기는  */
+a:hover {
+  text-decoration: underline;
+}
 
   
