--- a/homework/style.css
+++ b/homework/style.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
-  background-color: rgb(229, 209, 247);
+  background-color: rgb(244, 234, 255);
+  font-family: 'Roboto', sans-serif;
 }
 
 main {
@@ -10,20 +11,22 @@ main {
   border-radius: 10px;
 }
 
+header {
+  text-align: center;
+}
+
 h1 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-  color: rgb(102, 3, 194);
+  color: rgb(88, 49, 196);
   font-size: 60px;
   font-weight: bold;
 }
 
-img {
+header img {
   width: 300x;
   height: 200px;
 }
 
 h2 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
   color: rgb(255, 255, 255) ;
   font-size: 30px;
   text-align: left;
@@ -36,14 +39,13 @@ p {
   padding-left: 2%;
 }
 
-ol {
+ul {
   list-style: none;
   text-align: left;
   color: rgb(255, 255, 255);
 }
 
 a {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: rgb(102, 3, 194);
   text-decoration: none;
   background-color: rgb(250, 208, 146);
