--- a/Travel_page/shared.css
+++ b/Travel_page/shared.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Quicksand", "sans-serif";
+  font-family: "Quicksand", sans-serif;
   margin: 0;
 }
 
@@ -9,12 +9,27 @@ ul {
   padding: 0;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 60px;
+}
+
 #page-logo a {
   padding: 10px;
-  font-family: "Oleo Script", "sans-serif";
+  font-family: "Oleo Script", sans-serif;
   color: rgb(245, 243, 160);
   font-size: 50px;
   text-decoration: none;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
+}
+
+header ul {
+  display: flex;
+}
+
+header li {
+  margin-left: 20px;
 }
