--- a/Travel_page/style.css
+++ b/Travel_page/style.css
@@ -55,6 +55,11 @@
     background-color: rgb(255, 238, 0) ;
 }
 
+#highlights {
+    padding: 24px;
+    background: linear-gradient(0deg, rgb(227, 255, 253), rgb(202, 243, 240));
+}
+
 #destinations {
     display: flex;
     width: 90%;
