--- a/Travel_page/places.css
+++ b/Travel_page/places.css
@@ -1,13 +1,52 @@
 body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
+  color: rgb(68, 68, 68);
 }
 
 header{
   position: static;
 }
 
+main ul {
+  width: 1500px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+main li {
+  display: flex;
+  background-color: white;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  overflow: hidden;
+  width: 500px;
+}
+
 main li img {
   width: 300px;
   height: 280px;
+  object-fit: cover;
 }
 
+.item-content {
+  padding: 24px;
+  display: flex;
+  flex-direction: column; /*flex 컨테이너에서 아이템을 세로로 정렬해줌*/
+  justify-content: space-between;
+}
+
+.actions {
+  text-align: right;
+}
+
+.actions a {
+  text-decoration: none;
+  color: rgb(22, 211, 228);
+  padding: 6px;
+  border-radius: 6px; /*hover 곡률이지만 여기에 적용함 */
+}
+
+.actions a:hover {
+  background-color: rgb(235, 253, 255);
+}
