--- a/Webfood/style.css
+++ b/Webfood/style.css
@@ -24,6 +24,20 @@ a {
   text-transform: uppercase;
 }
 
+.menu-btn {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.menu-btn span {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+}
+
 #main-header ul {
   list-style: none;
   display: flex;
@@ -44,44 +58,46 @@ a {
   color: rgb(228, 163, 44);
 }
 
+#side-drawer {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(29, 26, 27);
+}
+
 main h1 {
   text-align: center;
   color: rgb(238, 164, 80);
   font-size: 3rem;
 }
-
-main ul {
-  list-style: none;
-}
-
 #latest-products {
   width: 80%;
   margin: 2rem auto;
 }
 
-#latest-products ul{
+#latest-products ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
-.food-items {
+.food-item {
   background-color: rgb(228, 206, 182);
   border-radius: 6px;
   overflow: hidden;
 }
 
-.food-items img {
+.food-item img {
   height: 15rem;
   width: 100%;
   object-fit: cover;
 }
 
 .food-item-content {
-  text-align: center;
   padding: 1rem;
+  text-align: center;
 }
 
 .btn {
@@ -93,4 +109,19 @@ main ul {
 
 .btn:hover {
   background-color: rgb(221, 134, 34);
+}
+
+/* 코드는 위에서부터 아래로 실행되기 때문에 미디어 쿼리의 위치가 중요 */
+@media (max-width: 48rem) {
+  #main-header nav {
+    display: none;
+  }
+
+  main h1 {
+    font-size: 1.5rem;
+  }
+
+  #latest-products ul {
+    grid-template-columns: 100%;
+  }
 }
